# lambda_svd

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  check_svd_serial.py  compile.sh  create_function.sh  credentials  dist_fmi_tree.cpp  dist_fmi_tree.h  fang_svd.py  fang_svd_redux.py  fmi.json  fmi_wrapper.cpp  kiss.h  mmiodense.c  mmiodense.cpp  mpitimer.cpp  mpitimer.h  run_mpi_random_bench_tests.py  run_mpi_stored_bench_tests.py  scale_svd_aws.sh  serial_tree.cpp  split_matrix.py  svd_serial.c  svdalgs.cpp  svdalgs.h  svds.py  test_aws.sh  test_fmi.sh  test_mpi.sh  test_svd_aws.sh  test_svd_fmi.py
fmi/: CMakeLists.txt
fmi/include/: Communicator.h
fmi/include/comm/: Channel.h  Direct.h  PeerToPeer.h
fmi/python/: PythonCommunicator.cpp  PythonCommunicator.h  fmi_python.cpp
fmi/python/tests/: client.py
fmi/src/comm/: Channel.cpp  Direct.cpp  PeerToPeer.cpp
inc/: dist_mpi_tree.h  fmi_wrapper.h  mmiodense.h  serial_tree.h  svdalgs.h
scripts/: check_fmi_results.py  check_mpi_results.py  combine_matrices.py  create_damped_matrix.py  fang_svd_redux.py
src/: dist_mpi_tree.cpp  serial_tree.cpp  svdalgs.cpp
svd_aws/: CMakeLists.txt  matrix_multiply.cpp  svd_aws.cpp  svd_aws_bench.cpp  svd_aws_test.cpp
svd_fmi/: CMakeLists.txt  svd_fmi.cpp
svd_mpi/: CMakeLists.txt  svd_mpi.cpp  svd_mpi_bench.cpp
svd_serial/: CMakeLists.txt  svd_serial.cpp
testdata/: 128_256_100_2_A.mtx  128_256_100_2_Stest.txt  128_256_100_2_U.mtx  128_256_100_2_Utest.mtx  128_256_100_2_Vt.mtx  128_256_100_2_Vttest.mtx  256_128_100_2_A.mtx  256_128_100_2_S.txt  256_128_100_2_Stest.txt  256_128_100_2_U.mtx  256_128_100_2_Utest.mtx  256_128_100_2_Vt.mtx  256_128_100_2_Vttest.mtx  256_256_100_2_A.mtx  256_256_100_2_S.txt  256_256_100_2_Stest.txt  256_256_100_2_U.mtx  256_256_100_2_Utest.mtx  256_256_100_2_Vt.mtx  256_256_100_2_Vttest.mtx
